# 24020173-btl-ltnc

./: .gitignore  CMakeLists.txt  README.md  main.cpp  new  playfield_event.h  resources.rc  sbg.h  sdl2_main.cpp  tetris_engine.cpp  tetris_engine.h  tetromino_gen_blueprint.h  tetrominoes.cpp  tetrominoes.h  win_h_main.cpp
assets/branding/: BRANDING.txt
engine/: playfield_event.h  tetris_config.h  tetris_engine.cpp  tetris_engine.h  tetromino_gen_blueprint.h  tetrominoes.cpp  tetrominoes.h
engine/javalibs/: jsystemstd.cpp  jsystemstd.h
game/: gamescene.h  hooker.cpp  hooker.h  scene_manager.cpp  sdl2_main.cpp
game/scenes/: game_initial_load.h  game_over_screen.h  loading_screen.h  main_menu.h  menu_btn.h
renderer/: disk_cache.h  particles.h  particles_system.cpp  sdl_component.cpp  sdl_components.h  sdl_inc.h  tetris_player.cpp  tetris_player.h  tetris_player_class.cpp  tetris_player_dbg.cpp  tetris_player_static.cpp  tetris_renderer.h
renderer/enemies/: bigblackbox.cpp
renderer/entities/: bigblackbox.cpp
renderer/sprites/: entity_prop.h  fontsprite.cpp  gameworld.cpp
renderer/sprites/entities/: Blugga.h  Grigga.h  Nigga.h  Redgga.cpp  Redgga.h  Tia.h  normal_entity.cpp  normal_entity.h
renderer/sprites/entities/fairies/: BlinderFairy.h  DistractorFairy.h  DisturberFairy.h  WeakenerFairy.h  debuff_fairy.cpp  debuff_fairy.h
renderer/sprites/player/: playerentity.cpp  playerentity.h
renderer/spritesystem/: particles.h  sprite.cpp  sprite.h
src/engine/: playfield_event.h  tetris_engine.cpp  tetris_engine.h  tetromino_gen_blueprint.h  tetrominoes.cpp  tetrominoes.h
src/engine/javalibs/: jsystemstd.cpp  jsystemstd.h
src/game/: sdl_component.cpp  sdl_components.h  tetris_player.h  tetris_player_class.cpp  tetris_player_dbg.cpp  tetris_renderer.h
src/game/sprites/: entity_prop.h
src/game/sprites/entities/: Nigga.h  Redgga.h  normal_entity.cpp  normal_entity.h
src/game/sprites/entities/fairies/: DistractorFairy.h  DisturberFairy.h  WeakenerFairy.h  debuff_fairy.h
src/game/sprites/player/: playerentity.cpp
src/game/spritesystem/: particles.h  sprite.h
src/process/: bag_generator.h  gamescene.h  hooker.cpp  hooker.h  sdl2_main.cpp
src/process/scenes/: game_over_screen.h  loading_screen.h  main_menu.h  menu_btn.h
